--- a/template.html
+++ b/template.html
@@ -125,11 +125,82 @@
 			text-shadow: none;
 			font-size: 20px;
 		}
+        [id^="particles-"]  {
+		  position: absolute;
+		  width: 100%;
+		  height: 100%;
+		  top: 0;
+		  left: 0;
+		  background-repeat: no-repeat;
+		  background-size: cover;
+		  background-position: 50% 50%;
+		}
+        #distro-meter {
+          border: 2px solid white;
+          border-radius: 20px;
+          overflow: hidden;
+          display: grid;
+          grid-template-columns: 20fr 5fr 10fr 2fr 12fr;;
+        }
+
+        #unit-1 {
+          background: #48bb78;
+        }
+
+        #unit-2 {
+          background: #ecc94b;
+        }
+
+        #unit-3 {
+          background: #ed8936;
+        }
+
+        #unit-4 {
+          background: #e53e3e;
+        }
+
+        #unit-5 {
+          background: #805ad5;
+        }
+
+        #distro-meter div {
+          color: white;
+          font-family: sans-serif;
+          font-weight: bold;
+          font-size: 12px;
+          line-height: 30px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+
+        .inv {
+            display: none;
+        }
+
 	</style>
 
 </head>
 
 <body class="stretched">
+    <div class="body-overlay"></div>
+	<div id="side-panel" class="dark">
+		<div id="side-panel-trigger-close" class="side-panel-trigger"><a href="#"><i class="icon-line-cross"></i></a></div>
+		<div class="side-panel-wrap">
+			<div class="widget clearfix">
+				<h4>Quick Jump</h4>
+				<nav class="nav-tree mb-0">
+					<ul>
+						<li><a href="#basic-info"><i class="icon-bolt2"></i>Basic Info</a></li>
+						<li><a href="#rundown"><i class="icon-bolt2"></i>Rundown</a></li>
+                        <li><a href="#score-distro"><i class="icon-bolt2"></i>Score Distribution</a></li>
+                        <li><a href="#"><i class="icon-bolt2"></i>Credit for College</a></li>
+                        <li><a href="#"><i class="icon-bolt2"></i>Resources</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</div>
 
 	<!-- Document Wrapper
 	============================================= -->
@@ -137,7 +208,7 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="transparent-header block-slider-1" data-sticky-class="not-dark">
+		<header id="header" class=" block-slider-1" data-sticky-class="not-dark">
 			<div id="header-wrap">
 				<div class="container">
 					<div class="header-row">
@@ -423,69 +494,311 @@
 			</div>
 			<div class="header-wrap-clone"></div>
 		</header><!-- #header end -->
+        <!-- Hero Section
+    ============================================= -->
+    <a name="basic-info"></a>
+    <section id="slider" class="slider-element" style="background: url('images/blocks/preview/hero-12.jpg') top center no-repeat; background-size: cover;">
 
-		<!-- Hero Section
-		============================================= -->
-		<section id="slider" class="slider-element include-header block-slider-1">
-
-			<div class="swiper_wrapper overflow-visible min-vh-100" data-loop="true">
-
-				<div class="swiper-container swiper-parent">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide dark">
-							<div class="container">
-								<div class="slider-caption">
-									<p class="mb-4 text-white-50 text-smaller" data-animate="fadeInUpSmall">The Ultimate Aggregate</p>
-									<h2 data-animate="fadeInUpSmall" data-delay="200">Everything you want to know about APs, in one place.</h2>
-									<div>
-										<a href="#" class="button button-border button-light button-rounded button-large ml-0 topmargin-sm" data-animate="fadeInUpSmall" data-delay="400">Explore</a>
-									</div>
-								</div>
-							</div>
-							<div class="swiper-slide-bg" style="background-image: url('images/blocks/preview/slider-1/1.jpg');"></div>
+			<div class="vertical-middle min-vh-100">
+				<div class="container py-5 py-md-0">
+					<div class="row">
+						<div class="col-lg-7 col-md-8">
+                            <h1 class="display-4 font-weight-bold">Full Name of Course</h1>
+                            <p class="lead text-white-50 mb-5">Put info of the test.</p>
+                            <p class="lead text-white-20 mb-5">Exam dates.</p>
+                            <a href="#" class="btn btn-light btn-lg border-width-2 side-panel-trigger px-4">Launch QuickJump</a>
 						</div>
-
-						<!-- Slide 2 -->
-						<div class="swiper-slide dark">
-							<div class="container">
-								<div class="slider-caption slider-caption-right" style="max-width: 650px;">
-									<p class="mb-4 text-white-50 text-smaller" data-animate="fadeInUpSmall">Every subject included</p>
-									<h2 data-animate="fadeInUpSmall" data-delay="200">A visually clear glance of all the info.</h2>
-									<div>
-										<a href="#" class="button button-border button-light button-rounded button-large ml-0 topmargin-sm" data-animate="fadeInUpSmall" data-delay="400">Explore</a>
-									</div>
-								</div>
-							</div>
-							<div class="swiper-slide-bg" style="background-image: url('images/blocks/preview/slider-1/2.jpg');"></div>
-						</div>
-
 					</div>
 				</div>
-
-				<div class="slider-arrow-left"><i class="icon-angle-left"></i><span>Prev</span></div>
-				<div class="slider-arrow-right"><span>Next</span> <i class="icon-angle-right"></i></div>
-				<div class="slide-number font-secondary"><div class="slide-number-current"></div><span></span><div class="slide-number-total op-05"></div></div>
 			</div>
 
 		</section>
 
+        <section id="content">
 
-	</div><!-- #wrapper end -->
+    			<div class="content-wrap py-0">
+                    <a name="rundown"></a>
+    				<div class="section m-0 dark" style="padding: 80px 0">
+    					<div class="container clearfix" style="max-width: 800px">
 
-	<!-- Go To Top
-	============================================= -->
-	<div id="gotoTop" class="icon-angle-up"></div>
+    						<div class="center dark" >
 
-	<!-- JavaScripts
-	============================================= -->
-	<script src="js/jquery.js"></script>
-	<script src="js/plugins.min.js"></script>
+    							<div class="heading-block">
+    								<h2>Course Rundown</h2>
+    								<span>Show off your Important Content with Elegance &amp; Attitude.</span>
+    							</div>
+                                <div class="tabs tabs-bb clearfix center" id="tab-9">
 
-	<script src="js/jquery.hotspot.js"></script>
+    								<ul class="tab-nav clearfix">
+    									<li><a href="#tabs-33">Main Units</a></li>
+    									<li><a href="#tabs-34">Recommended Pre-Requisites</a></li>
+    									<li><a href="#tabs-35">Test Format</a></li>
+    								</ul>
 
-	<!-- Footer Scripts
-	============================================= -->
-	<script src="js/functions.js"></script>
+    								<div class="tab-container">
+                        				<div class="tab-content clearfix" id="tabs-33">
+                                            <div id="distro-meter">
+                                              <div id="unit-1" data-toggle="tooltip" data-placement="bottom" title="Insert Unit Here">20</div>
+                                              <div id="unit-2" data-toggle="tooltip" data-placement="bottom" title="Insert Unit Here">5</div>
+                                              <div id="unit-3" data-toggle="tooltip" data-placement="bottom" title="Insert Unit Here">10</div>
+                                              <div id="unit-4" data-toggle="tooltip" data-placement="bottom" title="Insert Unit Here">2</div>
+                                              <div id="unit-5" data-toggle="tooltip" data-placement="bottom" title="Insert Unit Here">12</div>
+                                            </div>
+                                            <hr/>
+                                            <table class="table table-striped">
+                							  <thead>
+                								<tr>
+                								  <th>Unit #</th>
+                								  <th>Title</th>
+                                                  <th>Weight</th>
+                								</tr>
+                							  </thead>
+                							  <tbody>
+                								<tr>
+                								  <td></td>
+                								  <td></td>
+                								  <td></td>
+                								</tr>
+                								<tr>
+                								  <td></td>
+                								  <td></td>
+                								  <td></td>
+                								</tr>
+                								<tr>
+                								  <td></td>
+                								  <td></td>
+                								  <td></td>
+                								</tr>
+                							  </tbody>
+                							</table>
 
-</body>
-</html>
+                        				</div>
+                        			    <div class="tab-content clearfix" id="tabs-34">
+                        					Recommended pre-requisites are:
+                                            <ul class="align-items-left">
+                                                <li>Req 1</li>
+                                                <li>Req 2</li>
+                                            </ul>
+                                		</div>
+                                		<div class="tab-content clearfix" id="tabs-35">
+                                			<p>Insert test format.</p>
+                                            <table class="table table-striped">
+                							  <thead>
+                								<tr>
+                								  <th>Time Alotted</th>
+                								  <th>Type of Section</th>
+                                                  <th>Weight</th>
+                								</tr>
+                							  </thead>
+                							  <tbody>
+                								<tr>
+                								  <td></td>
+                								  <td></td>
+                								  <td></td>
+                								</tr>
+                								<tr>
+                								  <td></td>
+                								  <td></td>
+                								  <td></td>
+                								</tr>
+                								<tr>
+                								  <td></td>
+                								  <td></td>
+                								  <td></td>
+                								</tr>
+                							  </tbody>
+                							</table>
+                                		</div>
+                                    </div>
+                                </div>
+    						</div>
+
+    					</div>
+    				</div>
+
+    				<div class="section m-0" style="background-color: #dc3545; padding: 80px 0">
+    					<div class="container clearfix" style="max-width: 800px">
+                            <a name="score-distro"></a>
+    						<div class="center dark" >
+
+    							<div class="heading-block">
+    								<h2>Score Distribution</h2>
+    								<span>Show off your Important Content with Elegance &amp; Attitude.</span>
+    							</div>
+                                <div class="row ">
+                                    <div class="col-sm-6 col-lg-4 text-center">
+                                		<div class="counter"><span data-from="1" data-to="44455" data-refresh-interval="100" data-speed="1200"></span></div>
+                                		<h5>Test takers in 2020</h5>
+                                	</div>
+                                    <div class="col-sm-6 col-lg-4 text-center">
+                                		<div class="counter"><span data-from="1" data-to="407" data-refresh-interval="100" data-speed="1200" data-comma="true" data-sep="." data-places="2"></span></div>
+                                		<h5>Average Score</h5>
+                                	</div>
+            						<div class="col-sm-6 col-lg-4 text-center">
+            							<div class="counter"><span data-from="1" data-to="5290" data-refresh-interval="100" data-speed="1200" data-comma="true" data-sep="." data-places="2"></span></div>
+            							<h5>Percent receive a <br/> passing score (3+)</h5>
+            						</div>
+                                </div>
+                                <hr/>
+                                <table class="table table-striped">
+                                  <thead>
+                                    <tr>
+                                      <th>Score</th>
+                                      <th>% of Students</th>
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                    <tr>
+                                      <td>5</td>
+                                      <td>20%</td>
+                                    </tr>
+                                    <tr>
+                                      <td>4</td>
+                                      <td>20%</td>
+                                    </tr>
+                                    <tr>
+                                      <td>3</td>
+                                      <td>20%</td>
+                                    </tr>
+                                    <tr>
+                                      <td>2</td>
+                                      <td>20%</td>
+                                    </tr>
+                                    <tr>
+                                      <td>1</td>
+                                      <td>20%</td>
+                                    </tr>
+                                  </tbody>
+                                </table>
+
+                                <div class="toggle toggle-border">
+								<div class="toggle-header">
+									<div class="toggle-icon">
+										<i class="toggle-closed icon-line-plus"></i>
+										<i class="toggle-open icon-line-minus"></i>
+									</div>
+									<div class="toggle-title">
+										Distributions in 2019
+									</div>
+								</div>
+								<div class="toggle-content">
+                                    <div class="row">
+                                        <div class="col-sm-6 col-lg-4 text-center">
+                                    		<div class="counter"><span data-from="1" data-to="44455" data-refresh-interval="100" data-speed="1200"></span></div>
+                                    		<h5>Test takers in 2020</h5>
+                                    	</div>
+                                        <div class="col-sm-6 col-lg-4 text-center">
+                                    		<div class="counter"><span data-from="1" data-to="407" data-refresh-interval="100" data-speed="1200" data-comma="true" data-sep="." data-places="2"></span></div>
+                                    		<h5>Average Score</h5>
+                                    	</div>
+                						<div class="col-sm-6 col-lg-4 text-center">
+                							<div class="counter"><span data-from="1" data-to="5290" data-refresh-interval="100" data-speed="1200" data-comma="true" data-sep="." data-places="2"></span></div>
+                							<h5>Percent receive a <br/> passing score (3+)</h5>
+                						</div>
+                                </div>
+                                <table class="table table-striped">
+                                  <thead>
+                                    <tr>
+                                      <th>Score</th>
+                                      <th>% of Students</th>
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                    <tr>
+                                      <td></td>
+                                      <td></td>
+                                    </tr>
+                                    <tr>
+                                      <td></td>
+                                      <td></td>
+                                    </tr>
+                                    <tr>
+                                      <td></td>
+                                      <td></td>
+                                    </tr>
+                                    <tr>
+                                      <td></td>
+                                      <td></td>
+                                    </tr>
+                                    <tr>
+                                      <td></td>
+                                      <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table>
+							</div>
+    						</div>
+
+    					</div>
+    				</div>
+                </div>
+    				<div class="section m-0 dark" style="padding: 80px 0">
+    					<div class="container clearfix" style="max-width: 600px">
+
+    						<div class="center dark" >
+
+    							<div class="heading-block">
+    								<h2>Check for College Credit</h2>
+    								<span>Use the dropdown below to find out if the university you're looking to gives you credit or placement for taking the AP exam in this course.</span>
+    							</div>
+										<select id="target-real">
+                                            <option value="content_1">Option 1</option>
+                                            <option value="content_2">Option 2</option>
+                                            <option value="content_3">Option 3</option>
+										</select>
+
+                                <div id="content_1" class="inv">Content 1</div>
+                                <div id="content_2" class="inv">Content 2</div>
+                                <div id="content_3" class="inv">Content 3</div>
+
+    						</div>
+
+    					</div>
+    				</div>
+
+
+
+    		</section><!-- #content end -->
+
+
+</div><!-- #wrapper end -->
+        	<!-- Go To Top
+        	============================================= -->
+        	<div id="gotoTop" class="icon-angle-up"></div>
+
+        	<!-- JavaScripts
+        	============================================= -->
+        	<script src="js/jquery.js"></script>
+        	<script src="js/plugins.min.js"></script>
+
+        	<script src="js/jquery.hotspot.js"></script>
+
+
+        	<!-- Bootstrap Select Plugin -->
+        	<script src="js/components/bs-select.js"></script>
+
+        	<!-- Select Splitter Plugin -->
+        	<script src="js/components/selectsplitter.js"></script>
+
+
+        	<!-- Footer Scripts
+        	============================================= -->
+        	<script src="js/functions.js"></script>
+            <script>
+                document
+                    .getElementById('target-real')
+                    .addEventListener('change', function () {
+                        'use strict';
+                        var vis = document.querySelector('.vis'),
+                            target = document.getElementById(this.value);
+                        if (vis !== null) {
+                            vis.className = 'inv';
+                        }
+                        if (target !== null ) {
+                            target.className = 'vis';
+                        }
+                });
+            </script>
+
+        </body>
+        </html>
