--- a/index.html
+++ b/index.html
@@ -136,22 +136,22 @@
 	<div id="wrapper" class="clearfix">
 
 		<!-- Header
-		============================================= -->
+		=============================================
 		<header id="header" class="transparent-header block-slider-1" data-sticky-class="not-dark">
 			<div id="header-wrap">
 				<div class="container">
 					<div class="header-row">
 
-						<!-- Brand
-						============================================= -->
+						Brand
+						=============================================
 						<a class="navbar-brand" >sAPient</a>
 
 						<div id="primary-menu-trigger">
 							<svg class="svg-trigger" viewBox="0 0 100 100"><path d="m 30,33 h 40 c 3.722839,0 7.5,3.126468 7.5,8.578427 0,5.451959 -2.727029,8.421573 -7.5,8.421573 h -20"></path><path d="m 30,50 h 40"></path><path d="m 70,67 h -40 c 0,0 -7.5,-0.802118 -7.5,-8.365747 0,-7.563629 7.5,-8.634253 7.5,-8.634253 h 20"></path></svg>
 						</div>
 
-						<!-- Primary Navigation
-						============================================= -->
+						Primary Navigation
+						=============================================
 						<nav class="primary-menu">
 
 							<ul class="menu-container">
@@ -417,13 +417,78 @@
 								</li>
 							</ul>
 
-						</nav><!-- #primary-menu end -->
+						</nav>
+
 					</div>
 				</div>
 			</div>
 			<div class="header-wrap-clone"></div>
-		</header><!-- #header end -->
+		</header>--><!-- #header end -->
+        <!-- Header
+        		============================================= -->
+        		<header id="header" class="transparent-header block-slider-1" data-sticky-class="not-dark">
+        			<div id="header-wrap">
+        				<div class="container">
+        					<div class="header-row">
 
+        						<!-- Brand
+        						============================================= -->
+        						<a class="navbar-brand" >sAPient</a>
+
+        						<div id="primary-menu-trigger">
+        							<svg class="svg-trigger" viewBox="0 0 100 100"><path d="m 30,33 h 40 c 3.722839,0 7.5,3.126468 7.5,8.578427 0,5.451959 -2.727029,8.421573 -7.5,8.421573 h -20"></path><path d="m 30,50 h 40"></path><path d="m 70,67 h -40 c 0,0 -7.5,-0.802118 -7.5,-8.365747 0,-7.563629 7.5,-8.634253 7.5,-8.634253 h 20"></path></svg>
+        						</div>
+
+        						<nav class="primary-menu">
+
+        							<ul class="menu-container">
+        								<li class="menu-item">
+        									<a class="menu-link" href="index.html"><div>Home</div></a>
+        								</li>
+        								<li class="menu-item">
+        									<a class="menu-link" href="index.html"><div>Find Your AP</div></a>
+        									<ul class="sub-menu-container">
+        									<li class="menu-item">
+        										<a class="menu-link" href="header-light.html">
+        											<div>AP Language and Composition</div>
+        										</a>
+        									</li>
+        									<li class="menu-item">
+        										<a class="menu-link" href="header-light.html">
+        											<div>AP US History</div>
+        										</a>
+        									</li>
+        									<li class="menu-item">
+        										<a class="menu-link" href="header-light.html">
+        											<div>AP Calculus BC</div>
+        										</a>
+        									</li>
+        									<li class="menu-item">
+        										<a class="menu-link" href="header-light.html">
+        											<div>AP Computer Science Principles</div>
+        										</a>
+        									</li>
+        									<li class="menu-item">
+        										<a class="menu-link" href="header-light.html">
+        											<div>AP Chinese Language and Composition</div>
+        										</a>
+        									</li>
+        									</ul>
+        								</li>
+        								<li class="menu-item">
+        									<a class="menu-link" href="index.html"><div>FAQs</div></a>
+        								</li>
+        							</ul>
+
+        						</nav>
+
+
+                                <!-- demo menu-->
+        					</div>
+        				</div>
+        			</div>
+        			<div class="header-wrap-clone"></div>
+        		</header><!-- #header end -->
 		<!-- Hero Section
 		============================================= -->
 		<section id="slider" class="slider-element include-header block-slider-1">
