fixed quickjump, added college names

--- a/template.html
+++ b/template.html
@@ -194,8 +194,8 @@
 						<li><a href="#basic-info"><i class="icon-bolt2"></i>Basic Info</a></li>
 						<li><a href="#rundown"><i class="icon-bolt2"></i>Rundown</a></li>
                         <li><a href="#score-distro"><i class="icon-bolt2"></i>Score Distribution</a></li>
-                        <li><a href="#"><i class="icon-bolt2"></i>Credit for College</a></li>
-                        <li><a href="#"><i class="icon-bolt2"></i>Resources</a></li>
+                        <li><a href="#credit"><i class="icon-bolt2"></i>Credit for College</a></li>
+                        <li><a href="#resources"><i class="icon-bolt2"></i>Resources</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -797,6 +797,7 @@
     					</div>
     				</div>
                 </div>
+                    <a name="credit"></a>
     				<div class="section m-0 dark" style="padding: 80px 0">
     					<div class="container clearfix" style="max-width: 600px">
 
@@ -808,18 +809,18 @@
     							</div>
 										<select id="target-real">
                                             <option value="" selected>Choose a school...</option>
-                                            <option value="content_1">Option 1</option>
-                                            <option value="content_2">Option 2</option>
-                                            <option value="content_3">Option 3</option>
-                                            <option value="content_4">Option 4</option>
-                                            <option value="content_5">Option 5</option>
-                                            <option value="content_6">Option 6</option>
-                                            <option value="content_7">Option 7</option>
-                                            <option value="content_8">Option 8</option>
-                                            <option value="content_9">Option 9</option>
-                                            <option value="content_10">Option 10</option>
-                                            <option value="content_11">Option 11</option>
-                                            <option value="content_12">Option 12</option>
+                                            <option value="content_1">Princeton</option>
+                                            <option value="content_2">Harvard</option>
+                                            <option value="content_3">Columbia</option>
+                                            <option value="content_4">MIT</option>
+                                            <option value="content_5">Yale</option>
+                                            <option value="content_6">Stanford</option>
+                                            <option value="content_7">UChicago</option>
+                                            <option value="content_8">UPenn</option>
+                                            <option value="content_9">CalTech</option>
+                                            <option value="content_10">Johns Hopkins</option>
+                                            <option value="content_11">Northwestern</option>
+                                            <!--<option value="content_12">Option 12</option>
                                             <option value="content_13">Option 13</option>
                                             <option value="content_14">Option 14</option>
                                             <option value="content_15">Option 15</option>
@@ -827,7 +828,7 @@
                                             <option value="content_17">Option 17</option>
                                             <option value="content_18">Option 18</option>
                                             <option value="content_19">Option 19</option>
-                                            <option value="content_20">Option 20</option>
+                                            <option value="content_20">Option 20</option>-->
 										</select>
 
                                         <hr/>
@@ -842,7 +843,7 @@
         							  </thead>
         							  <tbody>
         								<tr>
-        								  <td></td>
+        								  <td>Princeton</td>
         								  <td></td>
         								  <td></td>
         								  <td></td>
@@ -860,7 +861,7 @@
         							  </thead>
         							  <tbody>
         								<tr>
-        								  <td></td>
+        								  <td>Harvard</td>
         								  <td></td>
         								  <td></td>
         								  <td></td>
@@ -878,7 +879,7 @@
         							  </thead>
         							  <tbody>
         								<tr>
-        								  <td></td>
+        								  <td>Columbia</td>
         								  <td></td>
         								  <td></td>
         								  <td></td>
@@ -896,7 +897,7 @@
         							  </thead>
         							  <tbody>
         								<tr>
-        								  <td></td>
+        								  <td>MIT</td>
         								  <td></td>
         								  <td></td>
         								  <td></td>
@@ -914,7 +915,7 @@
         							  </thead>
         							  <tbody>
         								<tr>
-        								  <td></td>
+        								  <td>Yale</td>
         								  <td></td>
         								  <td></td>
         								  <td></td>
@@ -932,7 +933,7 @@
         							  </thead>
         							  <tbody>
         								<tr>
-        								  <td></td>
+        								  <td>Stanford</td>
         								  <td></td>
         								  <td></td>
         								  <td></td>
@@ -950,7 +951,7 @@
         							  </thead>
         							  <tbody>
         								<tr>
-        								  <td></td>
+        								  <td>UChicago</td>
         								  <td></td>
         								  <td></td>
         								  <td></td>
@@ -968,7 +969,7 @@
         							  </thead>
         							  <tbody>
         								<tr>
-        								  <td></td>
+        								  <td>UPenn</td>
         								  <td></td>
         								  <td></td>
         								  <td></td>
@@ -986,7 +987,7 @@
         							  </thead>
         							  <tbody>
         								<tr>
-        								  <td></td>
+        								  <td>CalTech</td>
         								  <td></td>
         								  <td></td>
         								  <td></td>
@@ -1004,7 +1005,7 @@
         							  </thead>
         							  <tbody>
         								<tr>
-        								  <td></td>
+        								  <td>Johns Hopkins</td>
         								  <td></td>
         								  <td></td>
         								  <td></td>
@@ -1022,14 +1023,14 @@
         							  </thead>
         							  <tbody>
         								<tr>
-        								  <td></td>
+        								  <td>Northwestern</td>
         								  <td></td>
         								  <td></td>
         								  <td></td>
         								</tr>
         							  </tbody>
         						</table></div>
-                                <div id="content_12" class="inv"><table class="table">
+                                <!--<div id="content_12" class="inv"><table class="table">
         							  <thead>
         								<tr>
         								  <th>Institution</th>
@@ -1190,12 +1191,13 @@
         								  <td></td>
         								</tr>
         							  </tbody>
-        						</table></div>
+        						</table></div>-->
 
     						</div>
 
     					</div>
     				</div>
+                    <a name="resources"></a>
                     <div class="section m-0" style="background-color: #dc3545; padding: 80px 0">
     					<div class="container clearfix" style="max-width: 800px">
                             <a name="score-distro"></a>
