--- a/template.html
+++ b/template.html
@@ -519,34 +519,34 @@
 									<a class="menu-link" href="index.html"><div>Find Your AP</div></a>
 									<ul class="sub-menu-container">
 									<li class="menu-item">
-										<a class="menu-link" href="header-light.html">
+										<a class="menu-link" href="ap-eng-lang.html">
 											<div>AP Language and Composition</div>
 										</a>
 									</li>
 									<li class="menu-item">
-										<a class="menu-link" href="header-light.html">
+										<a class="menu-link" href="apush.html">
 											<div>AP US History</div>
 										</a>
 									</li>
 									<li class="menu-item">
-										<a class="menu-link" href="header-light.html">
+										<a class="menu-link" href="ap=calc=bc.html">
 											<div>AP Calculus BC</div>
 										</a>
 									</li>
 									<li class="menu-item">
-										<a class="menu-link" href="header-light.html">
+										<a class="menu-link" href="ap-csp.html">
 											<div>AP Computer Science Principles</div>
 										</a>
 									</li>
 									<li class="menu-item">
-										<a class="menu-link" href="header-light.html">
+										<a class="menu-link" href="ap-chinese.html">
 											<div>AP Chinese Language and Composition</div>
 										</a>
 									</li>
 									</ul>
 								</li>
 								<li class="menu-item">
-									<a class="menu-link" href="index.html"><div>FAQs</div></a>
+									<a class="menu-link" href="faq.html"><div>FAQs</div></a>
 								</li>
 							</ul>
 
