--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         										</a>
         									</li>
         									<li class="menu-item">
-        										<a class="menu-link" href="ap=calc=bc.html">
+        										<a class="menu-link" href="ap-calc-bc.html">
         											<div>AP Calculus BC</div>
         										</a>
         									</li>
