--- a/index.html
+++ b/index.html
@@ -449,34 +449,34 @@
         									<a class="menu-link" href="index.html"><div>Find Your AP</div></a>
         									<ul class="sub-menu-container">
         									<li class="menu-item">
-        										<a class="menu-link" href="ap-eng-lang.html">
-        											<div>AP Language and Composition</div>
+        										<a class="menu-link" href="ap-calc-bc.html">
+        											<div>Framework for course pages</div>
         										</a>
         									</li>
         									<li class="menu-item">
         										<a class="menu-link" href="apush.html">
-        											<div>AP US History</div>
+        											<div>AP US History (Operational)</div>
         										</a>
         									</li>
         									<li class="menu-item">
-        										<a class="menu-link" href="ap-calc-bc.html">
+        										<a class="menu-link" href="#">
         											<div>AP Calculus BC</div>
         										</a>
         									</li>
         									<li class="menu-item">
-        										<a class="menu-link" href="ap-csp.html">
+        										<a class="menu-link" href="#">
         											<div>AP Computer Science Principles</div>
         										</a>
         									</li>
         									<li class="menu-item">
-        										<a class="menu-link" href="ap-chinese.html">
+        										<a class="menu-link" href="#">
         											<div>AP Chinese Language and Composition</div>
         										</a>
         									</li>
         									</ul>
         								</li>
         								<li class="menu-item">
-        									<a class="menu-link" href="faq.html"><div>FAQs</div></a>
+        									<a class="menu-link" href="#"><div>FAQs</div></a>
         								</li>
         							</ul>
 
